--- a/package.json
+++ b/package.json
@@ -63,12 +63,15 @@
     "@storybook/addon-essentials": "^6.4.18",
     "@storybook/addon-interactions": "^6.4.18",
     "@storybook/addon-links": "^6.4.18",
+    "@storybook/addon-storyshots": "^6.5.9",
     "@storybook/node-logger": "^6.4.18",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.4.18",
     "@storybook/testing-library": "^0.0.9",
     "@storybook/testing-react": "^1.2.3",
     "msw": "^0.36.8",
-    "msw-storybook-addon": "^1.6.0"
+    "msw-storybook-addon": "^1.6.0",
+    "react-test": "^0.14.2",
+    "renderer": "^0.1.5"
   }
 }
