--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@storybook/react": "^6.4.18",
     "@storybook/testing-library": "^0.0.9",
     "@storybook/testing-react": "^1.2.3",
+    "chromatic": "^6.5.6",
     "msw": "^0.36.8",
     "msw-storybook-addon": "^1.6.0",
     "react-test": "^0.14.2",
